updates made to chapter 5-9, still missing close-out for chapter 5

--- a/templates/chap3.tex
+++ b/templates/chap3.tex
@@ -451,7 +451,7 @@ The cost function for a neural network takes on the form of a loss term and a co
 
 Note the similarity in appearance to the regularized negative log likelihood cost function for logistic regression (Equation \ref{eq:logreg_cost_reg}). Here, $m$ is the number of predictor values in the input layer, $K$ is the number of outputs, $L$ is the number of layers, and $i$ and $j$ track the weights for layer $j$, unit $i$. $\lambda$ is a regularization term controlling the balance between the loss term and complexity term in the cost function. 
 
-As usual, minimizing this loss function is the goal of the NN learning process. This is generally accomplished using the backpropagation algorithm to compute the gradients needed for a gradient descent optimization \citep[p.\ 396]{hastie_elements_2009}.
+As usual, minimizing this loss function is the goal of the ANN learning process. This is generally accomplished using the backpropagation algorithm to compute the gradients needed for a gradient descent optimization \citep[p.\ 396]{hastie_elements_2009}.
 
 \section{Uncertainty Analysis}\label{ch3:uncertainty_analysis}
 \begin{wrapfigure}{R}{0.45\textwidth}
@@ -482,7 +482,7 @@ In order to examine the uncertainty introduced by structural aspects of the chos
 \subsubsection{Parameter Uncertainty}\label{ch3:param_uncertainty}
 The fitting procedure for machine learning models generally involves minimizing a cost function as updates are iteratively made to model parameters, e.g., feature weights. However, the final trained models treat these parameters as deterministic values with no uncertainty. The complexity of neural networks, and the potential for different parameterizations as randomness in advanced techniques like dropout and mini-batching influence the training process, suggest such representations under-characterize the model space. By defining the range of uncertainty on model parameters, it is possible to generate many solutions from the same model that define an ensemble of valid predictions. Uncertainty estimates derived from this ensemble can introduce a measure of confidence in a model’s output, allowing the model to directly explain what it knows and, more importantly, what it doesn’t know in the solutions it produces.
 
-The Google DeepMind team introduced a method called ``Bayes by Backprop'' in 2015 where single-value weights are replaced by probability distributions in a neural network architecture \citep{blundell_weight_2015}. Making the simplifying assumption that the weight distributions are Gaussian, each weight parameter in a standard NN layer is replaced by a mean and a standard deviation in a probabilistic layer. A fully-trained \acrlong{bnn} (\acrshort{bnn}) samples from the weight distributions for just-in-time determination of weight values as data is fed through to produce a prediction. Therefore, each prediction of the BNN varies depending on the selected weights, and running the network many times on the same data set will produce a set of different results. An analysis of the variation in this solution ensemble can characterize how parameter uncertainty impacts BNN classification performance.
+The Google DeepMind team introduced a method called ``Bayes by Backprop'' in 2015 where single-value weights are replaced by probability distributions in a neural network architecture \citep{blundell_weight_2015}. Making the simplifying assumption that the weight distributions are Gaussian, each weight parameter in a standard ANN layer is replaced by a mean and a standard deviation in a probabilistic layer. A fully-trained \acrlong{bnn} (\acrshort{bnn}) samples from the weight distributions for just-in-time determination of weight values as data is fed through to produce a prediction. Therefore, each prediction of the BNN varies depending on the selected weights, and running the network many times on the same data set will produce a set of different results. An analysis of the variation in this solution ensemble can characterize how parameter uncertainty impacts BNN classification performance.
 
 At a fundamental level, BNNs operate using Bayes theorem for training the network \citep{webster_probabilistic_2021}:
 
@@ -511,7 +511,7 @@ Dropping constant terms and treating this as an objective to minimize \citep{blu
 
 This two-term objective describes a trade-off between the complexity as controlled by deviation from the prior ($P({\bf w})$) and the negative log-likelihood term measuring the fit to the data.
 
-In this thesis, the TensorFlow Probability package is used to transform the NN from Section \ref{ch3:ann} into a BNN for uncertainty estimation \citep{dillon_tensorflow_2017}. Running a trained BNN multiple times will produce a collection of different results due to the randomness in the model. Geothermal gradient class probabilities from these realizations can be averaged by class for each point location, and entropy values calculated from the ensemble-averaged probabilities to examine parameter uncertainty.
+In this thesis, the TensorFlow Probability package is used to transform the ANN from Section \ref{ch3:ann} into a BNN for uncertainty estimation \citep{dillon_tensorflow_2017}. Running a trained BNN multiple times will produce a collection of different results due to the randomness in the model. Geothermal gradient class probabilities from these realizations can be averaged by class for each point location, and entropy values calculated from the ensemble-averaged probabilities to examine parameter uncertainty.
 
 \subsubsection{Measurement Uncertainty}\label{ch3:measure_uncertainty}
 Data modeling and analytics generally begin with the collection, engineering, and conditioning of features of interest. Building the perfect dataframe for machine learning may be the first priority, but capturing standard error estimates for its constituent features is fundamental to understanding how much uncertainty they bring to the prediction problem.
