--- a/templates/chap7.tex
+++ b/templates/chap7.tex
@@ -26,7 +26,7 @@ Uncertainty exists, as does the opportunity to include it in a larger decision-m
 
 If an ensemble of models is considered, structural or model uncertainty (see Section \ref{ch3:structural_uncertainty}) can direct efforts around how to approach machine learning prediction. For example, when entropy appears high throughout the area of interest (AOI), and most of the models show reasonable agreement except for one or two, this could justify down-selecting those models and re-evaluating from the reduced ensemble. But if high variance is observed across many models, this might indicate the input data insufficiently describes the system. Likewise, predictions from probabilistic models that show high parameter uncertainty in the AOI (Section \ref{ch3:param_uncertainty}) should be treated as suspect and the model refactored or retrained on a larger data set. Insights like these mitigate the risk of over-confidence in under-performing models, potentially avoiding a poorly-placed exploration well based on those models further down the line.
 
-For cost models, directly incorporating uncertainty serves to counter the classic misconception that applying average values to elements of a complex system will lead to an average system result \citep[Flaw of Averages,][p.\ 17-19]{de_neufville_flexibility_2011}. Instead, using variable distributions and generating expected values from multiple model realizations provides accurate median estimates and describes the spread of potential results. As discussed in Section \ref{ch6:cost_model_metrics}, target curves and percentiles defining Value at Risk and Value at Gain offer a richer set of metrics for model comparison. Using these metrics can reveal the combination of strategic choices for a geothermal project timeline and execution that mitigate the risk of project losses and captures the most potential gain.
+For cost models, directly incorporating uncertainty serves to counter the classic misconception that applying average values to elements of a complex system will lead to an average system result \citep[Flaw of Averages,][p.\ 17-19]{de_neufville_flexibility_2011}. Instead, using variable distributions and generating expected values from multiple model realizations provides accurate median estimates and describes the spread of potential results. As discussed in Section \ref{ch6:cost_model_metrics}, target curves and percentiles defining Value at Risk and Value at Gain offer a richer set of metrics for model comparison. Using these metrics can reveal the combination of strategic choices for a geothermal project timeline and execution that mitigate the risk of project losses and target the greatest upside opportunity.
 
 \section{Risk Analysis}
 \label{ch7:risk_analysis}
@@ -119,7 +119,7 @@ The risk scorecard methodology plots risks before and after mitigation on a $5\t
 \begin{figure}%[htp]
 \centering
 \includegraphics[width=\linewidth]{templates/images/Figure-Risk_Matrix.png}
-\caption[Geothermal project risk matrix]{Risk matrix for categorizing and prioritizing project risks (dark gray) and charting risk mitigation strategies (white). Marker size corresponds with risk value (likelihood $\times$ consequence). Markers are spread out within each cell for visualization purposes. Risk labels match those in Table \ref{tab:risk_log}.}
+\caption[Geothermal project risk matrix]{Risk matrix for categorizing and prioritizing project risks (dark gray) and charting risk mitigation strategies (white). Marker size corresponds with risk value (likelihood $\times$ consequence). Markers are spread out within each cell for visualization purposes. Risk labels match those in Table \ref{tab:risk_log}. Background color map depicts risk priority ranging from 1 to 25.}
 \label{fig:risk_matrix}
 \end{figure}
 
@@ -137,4 +137,4 @@ Oil \& gas companies are uniquely positioned to embrace geothermal, including EG
 
 Interest in collaboration runs high as well. The Geothermal Technologies Office regularly promotes cross-over technology transfer between the oil \& gas and geothermal communities, funding programs like GEO out of the University of Texas Austin that specifically target transitioning industry capabilities \citep{hamm_geothermal_2021}. And the operational efficiencies that companies like Unocal previously brought to geothermal operations in the United States, Philippines, and Indonesia in the past resonate with the needs of today \citep{melosh_geothermal_2017,palma_dynamic_2014}.
 
-Given the promise of change in the energy transition, the cross-sector synergies in fundamental skill sets, and strong interest in partnership from those already committed, geothermal may be the shortest path solution for building a lower-carbon business portfolio. Getting there requires analysis of the risks as well as mitigation strategies needed to reduce the likelihood and consequence of those risks, as described in Section \ref{ch7:risk_analysis}. Based on the results of this thesis, the path from great opportunity to profitability may lie in combining available data and digital technologies to create useful predictive models with uncertainty. The last part is fundamental --- uncertainty analysis will define where measurements are meaningful, where models are predictive, and which strategy offers the greatest potential gain. Lessons learned here apply to geothermal exploration and production, but embracing uncertainty for better decision-making and risk-mitigation will likely benefit every stage of the geothermal lifecycle. Uncertainty characterization may thus be the key to building more certainty in the future of geothermal.
+Given the promise of change in the energy transition, the cross-sector synergies in fundamental skill sets, and strong interest in partnership from those already committed, geothermal may be the shortest path solution for building a lower-carbon business portfolio. Getting there requires analysis of the risks as well as mitigation strategies needed to reduce the likelihood and consequence of those risks, as described in Section \ref{ch7:risk_analysis}. Based on the results of this thesis, the path from great opportunity to profitability may lie in combining available data and digital technologies to create useful predictive models with uncertainty. The last part is fundamental --- uncertainty analysis will define where measurements are meaningful, where models are predictive, and which strategy offers the greatest potential gain. Lessons learned here apply to geothermal exploration and production, but embracing uncertainty for better decision-making and risk-mitigation will likely benefit every stage of the geothermal lifecycle. Uncertainty characterization may thus be the key to building greater certainty in the future of geothermal.
