--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,45 @@
 
+@phdthesis{pepin_new_2019,
+	title = {New {Approaches} to {Geothermal} {Resource} {Exploration} and {Characterization}},
+	school = {New Mexico Institute of Mining and Technology},
+	author = {Pepin, Jeffrey},
+	year = {2019},
+	note = {ISBN: 0438764366},
+}
+
+@article{pepin_deep_2015,
+	title = {Deep fluid circulation within crystalline basement rocks and the role of hydrologic windows in the formation of the {Truth} or {Consequences}, {New} {Mexico} low‐temperature geothermal system},
+	volume = {15},
+	issn = {1468-8115},
+	number = {1-2},
+	journal = {Geofluids},
+	author = {Pepin, Jeffrey and Person, Mark and Phillips, Fred and Kelley, Shari and Timmons, Stacy and Owens, Lara and Witcher, James and Gable, C},
+	year = {2015},
+	note = {Publisher: Wiley Online Library},
+	pages = {139--160},
+}
+
+@techreport{witcher_deep_2002,
+	title = {Deep {Production} {Well} for {Geothermal} {Direct}-{Use} {Heating} of {A} {Large} {Commercial} {Greenhouse}, {Radium} {Springs}, {Rio} {Grande} {Rift}, {New} {Mexico}},
+	url = {https://www.osti.gov/biblio/791568},
+	abstract = {The U.S. Department of Energy's Office of Scientific and Technical Information},
+	language = {English},
+	number = {DOE/ID13747},
+	urldate = {2021-08-02},
+	institution = {Alex R. Masson, Inc. (US)},
+	author = {Witcher, James C.},
+	month = jan,
+	year = {2002},
+	doi = {10.2172/791568},
+}
+
+@article{witcher_geothermal_2001,
+	title = {Geothermal direct-use well for commercial greenhouses radium springs, {New} {Mexico}},
+	author = {Witcher, James C},
+	year = {2001},
+	note = {Publisher: Citeseer},
+}
+
 @misc{brown_personal_2021,
 	title = {personal communication},
 	author = {Brown, Stephen C},
@@ -3921,14 +3962,6 @@ Publisher: Nature Publishing Group},
 	month = feb,
 	year = {2021},
 	keywords = {Energy Transition, Renewables, Total},
-}
-
-@phdthesis{pepin_new_2018,
-	title = {New {Approaches} to {Geothermal} {Resource} {Exploration} and {Characterization}},
-	school = {New Mexico Institute of Mining and Technology},
-	author = {Pepin, Jeffrey Donald},
-	year = {2018},
-	note = {ISBN: 0438764366},
 }
 
 @article{siler_three-dimensional_2019,
