--- a/templates/appb.tex
+++ b/templates/appb.tex
@@ -21,4 +21,16 @@ The static model described in Section \ref{ch4:cm_concept} was implemented in Mi
 \pagebreak
 \section{Flexible NPV Models}\label{app:B_flex_models}
 
-\textbf{TO BE ADDED}
+\begin{figure}[H]
+\centering
+\includegraphics[width=\textwidth]{templates/images/Figure-Flexible_Model_SheetA.png}
+\caption[Probabilistic cost model worksheet (part 1)]{First part of geothermal power plant expansion probabilistic NPV cost model. Probability distribution functions apply to Average Geothermal Gradient, Initial Average Reservoir Temperature, Drilling \& Completions Costs, Thermal Drawdown Rate, and Price Forecast.}
+\label{fig:probabilistic_model_sheet1}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=\textwidth]{templates/images/Figure-Flexible_Model_SheetB.png}
+\caption[Probabilistic cost model worksheet (part 2)]{Second part of geothermal power plant expansion probabilistic NPV cost model. Probability distribution functions apply to Average Geothermal Gradient, Initial Average Reservoir Temperature, Drilling \& Completions Costs, Thermal Drawdown Rate, and Price Forecast. Decision rules are implemented in the annual cash flow section. The yearly breakdown of cost and revenue only extends out to year 2 for visualization purposes but continues to year 30 in the actual spreadsheet.}
+\label{fig:probabilistic_model_sheet2}
+\end{figure}
