--- a/templates/chap4.tex
+++ b/templates/chap4.tex
@@ -1,4 +1,4 @@
-\chapter{Cost-Modeling for an EGS Power Plant Expansion}\label{ch4:cm_prep}
+\chapter{Cost-Modeling for an\\EGS Power Plant Expansion}\label{ch4:cm_prep}
 \section{EGS Expansion Concept}\label{ch4:cm_concept}
 \subsection{Lightning Dock EGS}\label{ch4:lightning_dock_egs}
 Lightning Dock is presently the only commercial power plant operating in the state of New Mexico (see Section \ref{ch2:lightning_dock}). The net generating capacity after its first phase of development was 4 MW in 2013, with the expectation of upgrading to 10 MW in a second development phase that never came to fruition. Instead, the facility underwent a significant refit in 2018, resulting in a net capacity of 11.2 MW generated entirely from hydrothermal brine production \citep{bonafin_repowering_2019}.
