--- a/templates/chap6.tex
+++ b/templates/chap6.tex
@@ -1,4 +1,4 @@
-\chapter{Power Plant Expansion Cost Model Results}\label{ch6:cm_results}
+\chapter{EGS Power Plant Expansion\\Cost Model Results}\label{ch6:cm_results}
 
 Chapter \ref{ch4:cm_prep} outlined the cost modeling strategy for a hypothetical 5 MW expansion project of the Lightning Dock power plant in Animas Valley, NM. This chapter reviews the results of the different model approaches, explores insights gained from those models, and describes how this approach mitigates risks associated with geothermal production.
 
