--- a/templates/chap5.tex
+++ b/templates/chap5.tex
@@ -1,4 +1,4 @@
-\chapter{Machine Learning Results}\label{ch5:ml_results}
+\chapter{Geothermal Exploration\\Machine Learning Results}\label{ch5:ml_results}
 
 Chapter \ref{ch3:expl_ml_prep} outlined the machine learning and uncertainty analysis strategy for characterizing geothermal gradient, a proxy for the heat risk element, across the Southwestern NM study area. This chapter reviews the results of applying that strategy with the curated data set described in Appendix \ref{app:A_data_layers}. In addition, this chapter places insights from the model results and uncertainty evaluation in context with mitigating risks associated with geothermal exploration.
 
@@ -565,8 +565,8 @@ XGBoost models, parameterized as described for WDS4 in Table \ref{tab:xgb_tuning
 
 Interestingly, variations in SiGT values result in high classification uncertainty in many locations across the AOI (Figure \ref{fig:mu_masked_pred_map}). Concentrated areas of uncertainty are observed in the east-southeast -- an area where silica samples were collected but not where many WDS4 well observations are located (Figure \ref{fig:mu_stderr_entropy}A-B). Similarly, large patches of higher entropy appear in the north and just west of the AOI center. Once again, these are under-sampled regions in WDS4 (Figure \ref{fig:mu_stderr_entropy}B). It appears that as training data values for SiGT change due to perturbations, thresholds for XGBoost decision trees shift enough to significantly impact the stability of model predictions away from wells. SiGT-related splits will appear near the root node of decision trees based on its dominance over other features for classification importance. Changes to the decision thresholds will thus have a strong cascading effect on the final classification choices for XGBoost models. The problem lies in both the magnitude of SiGT standard errors as well as the heterogeneous sampling of the study area by WDS4 well locations. The degree of uncertainty seen here would likely be reduced if WDS4 included more comprehensive coverage of the study area.
 
-\section{Case Study Insights}\label{ch5:case_insights}
-\subsection{Southwestern New Mexico PFA}
+\section{Comparative Study Insights}\label{ch5:case_insights}
+\subsection{Southwestern New Mexico PFA}\label{ch5:caase_nm_pfa}
 In the Southwestern NM PFA project, \citet{bielicki_hydrogeolgic_2015} focused on hydrogeologic windows, defined as areas where erosion, faulting, or volcanic intrusions breach regional sealing layers and allow heated groundwater to reach the surface. Fundamentally, their work targeted hydrothermal systems when assigning geothermal favorability scores, treating heat, fluid volume, and flow path/reservoir as the key risk elements. The last risk element combines particle tracking of geochemical signatures (lithium, boron) with fluid recharge-discharge pathways, effectively replacing permeability and seal risk elements with a model of the subsurface water cycle. Although interesting in its own right, the integrated nature of the PFA favorability map makes it a poor benchmark for the machine learning results here which focus on the heat risk element alone. Instead, the geothermal gradient feature map described in Figure \ref{app:dl_geothermal_gradient}, which \citet{bielicki_hydrogeolgic_2015} derived from NGDS data paired with additional oil \& gas well measurements, serves as the best reference for comparison. 
 
 \begin{figure}
@@ -579,7 +579,7 @@ In the Southwestern NM PFA project, \citet{bielicki_hydrogeolgic_2015} focused o
 
 The PFA study also honed in on specific locations in the study area due to perceived geothermal favorability. Figure \ref{fig:pfa_prospects} highlights four regions of interest in the context of the SW NM physiographic provinces and areas noted for high geothermal gradients (>60 K/km) in the \citeauthor{bielicki_hydrogeolgic_2015} gradient feature map. To the southwest in the BR province lies Lightning Dock, the focus of the cost model case study in Chapters \ref{ch4:cm_prep} and \ref{ch6:cm_results} and a USGS-designated hydrothermal KGRA since 1974. To the south in the RGR province, the Rincon geothermal region is marked by high boron concentrations, high heat flow, and shallow geothermal gradients exceeding 300 K/km \citep{witcher_deep_2002}. North of Rincon is Truth or Consequences, an area locally known for low-temperature hot springs, high permeability, and elevated concentrations of both boron and lithium \citep{pepin_deep_2015}. Finally, a region near the Gila River within the MDVF province was flagged by \citet{bielicki_hydrogeolgic_2015} as prospective based on known hot springs, high heat flow, and positive well geochemistry.
 
-In Figure \ref{fig:ml_models_prospects}, the same prospect polygons are superimposed on the geothermal gradient solutions for the four supervised machine learning models. All models identify high-grade geothermal gradients in the Lightning Dock (LD) and Rincon (RC) areas. Interestingly, the decision tree model predicts a relatively lower gradient at the Radium Springs KGA (white marker, Figure \ref{fig:ml_models_prospects}B) where high gradient values have been  directly measured. This serves as a good example of where individual models can deviate from a multi-model consensus. All models predict high-grade geothermal gradients in the northwest section of the Truth or Consequences polygon, although the marked spring in the southeast of the polygon corresponds with low- to mid-grade gradient classifications (Figure \ref{fig:ml_models_prospects}). Based on these model solutions, the geothermal spring location does not stand out as particularly prospective from a heat risk element perspective. The Gila region also has mixed signals in the models; the decision tree (Figure \ref{fig:ml_models_prospects}B) and neural network (Figure \ref{fig:ml_models_prospects}D) models suggest isolated patches of high geothermal gradient potential, but the logistic regression (Figure \ref{fig:ml_models_prospects}A) and XGBoost (Figure \ref{fig:ml_models_prospects}C) models make Gila look fairly unremarkable.
+In Figure \ref{fig:ml_models_prospects}, the same prospect polygons are superimposed on the geothermal gradient solutions for the four supervised machine learning models. All models identify high-grade geothermal gradients in the Lightning Dock (LD) and Rincon (RC) areas. Interestingly, the decision tree model predicts a relatively lower gradient at the Radium Springs KGA (marker in RC polygon, Figure \ref{fig:ml_models_prospects}B) where high gradient values have been  directly measured. This serves as a good example of where individual models can deviate from a multi-model consensus. All models predict high gradients in the NW part of the Truth or Consequences (TC) polygon, but not at the marked TC spring (Figure \ref{fig:ml_models_prospects}). Gila (GL) also has mixed signals; the decision tree (Figure \ref{fig:ml_models_prospects}B) and neural network (Figure \ref{fig:ml_models_prospects}D) models suggest isolated patches of high gradient potential, but logistic regression (Figure \ref{fig:ml_models_prospects}A) and XGBoost (Figure \ref{fig:ml_models_prospects}C) make GL look fairly unremarkable.
 
 \begin{figure}
 \centering
@@ -589,7 +589,7 @@ In Figure \ref{fig:ml_models_prospects}, the same prospect polygons are superimp
 \label{fig:ml_models_prospects}
 \end{figure}
 
-Uncertainty analysis plots generated in section \ref{ch5:uncertainty_analysis} offer additional guidance on evaluating the exploration potential of the four prospects. Figure \ref{fig:structural_uncertainty_prospects} demonstrates low structural uncertainty (model agreement) for mid-grade gradients in Gila or Truth and Consequences regions, and moderate-low uncertainty for high-grade gradients at Lightning Dock. High structural uncertainty is found in the northwestern section of the Truth and Consequences polygon and throughout the Rincon polygon. These areas were already noted to differ from model-to-model. In an exploration campaign, more analysis should be conducted to reduce uncertainties at these locations before any expensive field operations (e.g., exploration drilling) commence.
+The uncertainty analysis from Section \ref{ch5:uncertainty_analysis} reveals more about how to manage the four areas as exploration prospects. Figure \ref{fig:structural_uncertainty_prospects} quickly confirms some of the observations just outlined. There is low to moderate-low structural uncertainty (i.e., model agreement) for mid-grade gradients in GL and TC and high-grade gradients at LD. High structural uncertainties appear in the TC and RC polygons. For TC, models disagree on the exact boundary location between mid- and high-gradients. RC uncertainty is more pervasive, so additional modeling or model rationalization would be advised before executing any expensive field operations (e.g., geothermal well drilling) in that area.
 
 \begin{figure}
 \centering
@@ -607,7 +607,7 @@ Uncertainty analysis plots generated in section \ref{ch5:uncertainty_analysis} o
 \label{fig:param_uncertainty_prospects}
 \end{figure}
 
-Figure \ref{fig:param_uncertainty_prospects} illustrates the parameter uncertainty based on 1000 runs of the Bayesian neural network model. There is high certainty in the neural network classification for Lightning Dock as high-grade gradient, moderate certainty for the Gila and Truth and Consequences classifications as mid/low-grade gradient, and low certainty in the Rincon prediction. If Rincon is the target prospect, the neural network model cannot provide a classification with confidence, perhaps because of the complexity of the area, but also because the data under-constrains such a complex model. Explorationists would do well to choose a simpler model with more parameter certainty if no additional data is available for training the neural network.
+Figure \ref{fig:param_uncertainty_prospects} illustrates parameter uncertainty based on repeated runs of the BNN model. Gradient predictions for LD, GL, and TC all share moderate to high certainty. However, low parameter certainty is observed throughout the RC polygon. The ANN model predicted high-grade geothermal gradients at RC, but also mid-grade, low-grade, and even non-thermal locations (Figure \ref{fig:ml_models_prospects}D). If RC was a target prospect, using predictions from the neural network to guide next steps would not be advised. Explorationists would do well to choose a simpler model with more parameter certainty if no additional data is available for further training the neural network.
 
 \begin{figure}
 \centering
@@ -617,18 +617,40 @@ Figure \ref{fig:param_uncertainty_prospects} illustrates the parameter uncertain
 \label{fig:measure_uncertainty_prospects}
 \end{figure}
 
-Measurement uncertainty depicted in Figure \ref{fig:measure_uncertainty_prospects} considers Si Geothermometer Temperature (SiGT) in isolation from the rest of the input feature set. Noting that SiGT dominates the other features in Shapley importances for the XGBoost model (see Section \ref{ch5:xgb_feature_selection}), the level of measurement certainty for all four prospective areas is striking. A strip of low measurement certainty appears in the NW section of the Truth and Consequences polygon, and likewise for Rincon. However, there is less of a need to supplement the existing SiGT data set to reduce measurement uncertainty for these four prospect areas than in other locations within the AOI.
+Measurement uncertainty depicted in Figure \ref{fig:measure_uncertainty_prospects} considers Si Geothermometer Temperature (SiGT) in isolation from the rest of the input feature set, noting that SiGT dominates in feature importance for the XGBoost model (see Section \ref{ch5:xgb_feature_selection}). The level of measurement certainty for all four prospective areas is striking. A strip of low certainty appears at the gradient class boundary at TC, and likewise to the NW for Rincon. However, these results indicate no strong need to supplement or replace the SiGT data for the prospect areas, as might be the case for other locations within the AOI.
+\\
+In summary, the uncertainty analysis shows:
+\begin{itemize}[itemsep=2pt]
+    \item All models agree LD has the best high-grade gradient potential, while GL and TC are less prospective. The models are collectively inconclusive on RC.
+    \item Neural network parameter uncertainty makes it an unreliable model for assessing the RC area.
+    \item SiGT measurements are relatively certain for the prospect areas. Additional expenditures for SiGT data may not be necessary.
+\end{itemize}
+Treating this analysis as part of a hypothetical exploration program, the overall heat element favorability and low uncertainty would make LD a good prospect to progress to the well-planning stage. High uncertainty at RC would need to be addressed through additional pre-screening efforts before committing the resources and capital to drilling there.
 
-\subsection{SW New Mexico PCA}
+\subsection{Southwestern New Mexico PCA}\label{ch5:case_nm_pca}
+In a more recent study, \citet{pepin_new_2019} applied unsupervised PCA with k-means clustering to assess the geothermal potential of the Southwestern NM study area. \citeauthor{pepin_new_2019} noted the physiographic provinces in NM exert strong controls on the presence and type of USGS-identified KGRAs observed across the state. The cluster analysis identified two high-potential zones with different characteristics. The first defines a predominantly high-temperature hydrothermal zone stretching east-west from LD to the eastern AOI boundary and up along the Rio Grande to just above RC \citep[Figure 3.5A]{pepin_new_2019}. A second high-potential region surrounds the narrow zone where CP, MDVF, and RGR provinces all converge \citep[Figure 3.5C]{pepin_new_2019}, although this second group largely comprises systems with low-temperature hot springs. 
 
-In an unsupervised machine learning assessment of the Southwestern NM study area, \citet{pepin_new_2019} noted the physiographic provinces in New Mexico exert strong controls on the presence and type of USGS-identified KGRAs that exist across the state. Specifically, the  highest geothermal potential falls within a predominantly high-heat hydrothermal zone stretching east-west from Lightning Dock to the eastern AOI boundary and up along the Rio Grande to just above Rincon \citep[Figure 3.5A]{pepin_new_2019}. A second high-potential region surrounds the narrow zone where the CP, MDVF, and RGR provinces all converge \citep[Figure 3.5C]{pepin_new_2019}, although this second group largely comprises systems with low-temperature hot springs. 
+The supervised learning results presented in Figures \ref{fig:ml_models_prospects} and \ref{fig:structural_uncertainty_prospects} clearly display a correlation between high-grade geothermal gradient and physiographic province, but the relationship differs from that described by \citet{pepin_new_2019}. Models consistently predict high-grade gradients in the southern RGR and eastern MDVF provinces, with an additional ``hot spot'' where the RGR narrows to the north. This pattern repeats for all four machine learning models, and is present, albeit less obvious, in the geothermal gradient feature map from \citet{bielicki_hydrogeolgic_2015} (see Figure \ref{fig:pfa_prospects}). \citet{pepin_new_2019} combines the MDVF province in a low-potential cluster, driven in part to risk elements not considered here like structure/permeability. Nevertheless, the PCA model shows relatively strong overlap between clusters \citep[Figure 3.4,][]{pepin_new_2019}, suggesting additional data engineering or alternative dimensionality-reduction methods could be of value before fully-discounting the prospectivity of the MDVF province.
 
-The supervised learning results presented in Figures \ref{fig:ml_models_prospects} and \ref{fig:structural_uncertainty_prospects} clearly display a correlation between high-grade geothermal gradient and physiographic province, the relationship differs from that described by \citet{pepin_new_2019}. Models consistently predict low risk for the presence of geothermal heat in the southern RGR and eastern MDVF provinces, with an additional ``hot spot'' where the RGR narrows to the north. This pattern repeats for all four machine learning models, and is present, albeit less obvious, in the geothermal gradient feature map from \citet{bielicki_hydrogeolgic_2015} (see Figure \ref{fig:pfa_prospects}). 
+Cluster analysis shows great promise, particularly in identifying how feature importances change across a study area. Both \citep{pepin_new_2019} and \citep{smith_characterizing_2021} illustrate this point with significantly different dominant predictors for clusters correlated to individual physiographic provinces. Similar variance in feature importances was observed in the Shapley analysis by class (Figure \ref{fig:xgb_shap_global}); e.g., Si Geothermometer Temperatures top the importance list for class 0 and 1, but come in 2nd to Volcanic Dikes for class 3, and 4th from last in importance for class 2.
 
-
+Perhaps more interesting is the relationship between high-grade geothermal gradients and complex physiographic province \textit{interfaces} as seen in Figure \ref{fig:ml_models_prospects}. Specifically, the two boundary zones between 3 or 4 provinces within the AOI both have consistent high-grade geothermal gradient classifications. These zones also correspond with the two prospective clusters in the PCA analysis \citep{pepin_new_2019}. Whether greater geothermal potential at complex province junctions is unique to this study area or more broadly applicable requires further research.
 
 \section{Recap}\label{ch5:recap}
-\textbf{TO BE COMPLETED}
+This chapter presented the results from applying the four supervised machine learning models described in Chapter \ref{ch3:expl_ml_prep} to the curated data (Appendix \ref{app:A_data_layers}) for the Southwestern NM study area. Uncertainties associated with the choice of models, the model parameters, and data measurements were also examined in the context of next-steps decisions for an explorationist. The chapter concluded with a comparison with other geothermal prospectivity studies for the region.
+\\
+Key insights from the work include:
+\begin{enumerate}
+    \item Logistic regression models are simple and easy to tune, however other model techniques have much stronger predictive performance.
+    \item Decision trees are highly-explainable and directly identify feature importances. A notable downside is results can vary based on random structural variations during construction.
+    \item XGBoost models demonstrate very strong predictive performance and support best-in-class Shapley feature attribution analysis. However, XGBoost model tuning can be complex and time-consuming.
+    \item The highest degree of model complexity comes from neural network architectures, which show great performance if sufficient training data is available to constrain the enormous number of model parameters.
+    \item Structural uncertainty analysis highlights areas where models collectively agree or diverge on predictions. This is useful for rationalizing model selection and identifying spatial areas that require further study before taking costly actions.
+    \item Parameter uncertainties indicate the ``known unknowns'' for a model, i.e., locations where model predictions are poorly-constrained. Corrective actions include training on more data or relying on a different model technique.
+    \item Measurement uncertainties characterize the impact of data reliability on model predictions. If high uncertainty exists in an area of interest, additional data acquisition may be needed, especially from sources with lower standard errors. 
+    \item The value of this approach to exploration risk mitigation is demonstrated for  prospective areas identified in the Southwestern NM PFA study. High favorability, low uncertainty prospects (e.g., Lightning Dock) can progress to a well-planning stage, but areas with mixed favorability and low uncertainty (e.g., Rincon) would require additional pre-screening first.
+    \item A correlation between physiographic provinces and geothermal favorability established in other studies is also observed in the Southwestern NM study area. In addition, high-grade geothermal gradients (positive heat risk element values) align with complex convergence zones between 3 or more provinces.
+\end{enumerate}
 
 
 %%%  TEXT BELOW INTEGRATED INTO CHAPTER 3 %%%
