--- a/templates/main.tex
+++ b/templates/main.tex
@@ -30,6 +30,12 @@ vi,12pt,twoside,leftblank]{mitthesis}
 \usepackage{lgrind}
 \usepackage{float}
 
+%% add watermark
+\usepackage{draftwatermark}
+\SetWatermarkText{DRAFT}
+\SetWatermarkScale{3}
+\SetWatermarkColor[gray]{0.9}%{0.2}
+
 %% for figures
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
